--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,18 @@ section {
 i {
   color: #556b2f;
 }
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 10px;
-} */
+}
+::-webkit-scrollbar-thumb{
+  color: red;
+}
 /* laod page Animatoin */
 #animation {
   z-index: 99999999;
   position: fixed;
+  width: 100%;
+  height: 100%;
 }
 .page-bg {
   position: absolute;
@@ -207,7 +212,8 @@ header > nav > li {
 /* Start services sec */
 #services {
   position: relative;
-  min-height: 200vh;
+  min-height: 60vh;
+
   .container {
     display: grid;
     grid-template-columns: repeat(3, minmax(200px, 1fr));
@@ -265,6 +271,19 @@ header > nav > li {
 }
 /* End services sec */
 
+/* Start car sec */
+/* #cars {
+  position: relative;
+  min-height: 70vh;
+
+  .cards{
+    display: grid;
+    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    gap: 40px;
+  }
+} */
+/* End car sec */
+
 /* Animations */
 @keyframes movement {
   from {
@@ -274,6 +293,6 @@ header > nav > li {
   to {
     transform: scale(1.5) translateY(-25px) rotateX(45deg);
     box-shadow: 0 25px 40px rgba(0, 0, 0, 0.4);
-    background: #3399ff;
+    background: #556b2f;
   }
 }
